--- a/wechat-core/pom.xml
+++ b/wechat-core/pom.xml
@@ -20,6 +20,9 @@
   </properties>
 
   <dependencies>
-
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
   </dependencies>
 </project>
