'完善wechat子项目初始化'

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <modules>
         <module>wechat-core</module>
         <module>wechat-web</module>
+        <module>wechat-dialogue</module>
+        <module>wechat-foundation</module>
     </modules>
     <packaging>pom</packaging>
 
